# libsdl2pp-windows

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
deploy/travis-ci/: travis-ci.sh
deploy/travis-ci/trusty-amd64-gcc/: before-install.sh  script.sh
deploy/travis-ci/windows-amd64/: before-install.sh  script.sh
